// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a passed component 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal-content"
  closeTimeoutMS={0}
  isOpen={true}
  onRequestClose={[Function]}
  overlayClassName="modal-overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  role="dialog"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <Portal
    containerInfo={
      <div
        class="ReactModalPortal"
      >
        <div
          class="ReactModal__Overlay ReactModal__Overlay--after-open modal-overlay"
        >
          <div
            class="ReactModal__Content ReactModal__Content--after-open modal-content"
            role="dialog"
            tabindex="-1"
          >
            <div>
               Hello World! 
            </div>
          </div>
        </div>
      </div>
    }
  >
    <ModalPortal
      ariaHideApp={true}
      bodyOpenClassName="ReactModal__Body--open"
      className="modal-content"
      closeTimeoutMS={0}
      defaultStyles={
        Object {
          "content": Object {
            "WebkitOverflowScrolling": "touch",
            "background": "#fff",
            "border": "1px solid #ccc",
            "borderRadius": "4px",
            "bottom": "40px",
            "left": "40px",
            "outline": "none",
            "overflow": "auto",
            "padding": "20px",
            "position": "absolute",
            "right": "40px",
            "top": "40px",
          },
          "overlay": Object {
            "backgroundColor": "rgba(255, 255, 255, 0.75)",
            "bottom": 0,
            "left": 0,
            "position": "fixed",
            "right": 0,
            "top": 0,
          },
        }
      }
      isOpen={true}
      onRequestClose={[Function]}
      overlayClassName="modal-overlay"
      parentSelector={[Function]}
      portalClassName="ReactModalPortal"
      role="dialog"
      shouldCloseOnEsc={true}
      shouldCloseOnOverlayClick={true}
      shouldFocusAfterRender={true}
      shouldReturnFocusAfterClose={true}
      style={
        Object {
          "content": Object {},
          "overlay": Object {},
        }
      }
    >
      <div
        className="ReactModal__Overlay ReactModal__Overlay--after-open modal-overlay"
        onClick={[Function]}
        onMouseDown={[Function]}
        style={Object {}}
      >
        <div
          className="ReactModal__Content ReactModal__Content--after-open modal-content"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          role="dialog"
          style={Object {}}
          tabIndex="-1"
        >
          <MockComponent>
            <div>
               Hello World! 
            </div>
          </MockComponent>
        </div>
      </div>
    </ModalPortal>
  </Portal>
</Modal>
`;

exports[`should render an empty modal 1`] = `
<Portal
  containerInfo={
    <div
      class="ReactModalPortal"
    />
  }
>
  <ModalPortal
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    className="modal-content"
    closeTimeoutMS={0}
    defaultStyles={
      Object {
        "content": Object {
          "WebkitOverflowScrolling": "touch",
          "background": "#fff",
          "border": "1px solid #ccc",
          "borderRadius": "4px",
          "bottom": "40px",
          "left": "40px",
          "outline": "none",
          "overflow": "auto",
          "padding": "20px",
          "position": "absolute",
          "right": "40px",
          "top": "40px",
        },
        "overlay": Object {
          "backgroundColor": "rgba(255, 255, 255, 0.75)",
          "bottom": 0,
          "left": 0,
          "position": "fixed",
          "right": 0,
          "top": 0,
        },
      }
    }
    isOpen={false}
    onRequestClose={[Function]}
    overlayClassName="modal-overlay"
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    role="dialog"
    shouldCloseOnEsc={true}
    shouldCloseOnOverlayClick={true}
    shouldFocusAfterRender={true}
    shouldReturnFocusAfterClose={true}
    style={
      Object {
        "content": Object {},
        "overlay": Object {},
      }
    }
  />
</Portal>
`;
